--- a/index.html
+++ b/index.html
@@ -95,51 +95,32 @@
   <!-- Quienes somos -->
   <div class="quienes-somos">
     <h2>Quiénes somos</h2>
-    <p>Somos un pequeño grupo de vendedores de productos Catamarqueños de momento solo tenemos productos de temporada que se van a ir actualizando cuando tengamos los productos de determinada temporada</p>
+    <p>Somos un pequeño grupo de vendedores de productos Catamarqueños de momento solo tenemos productos de temporada, para ver mejor los productos organicos que vendemos puede darle click derecho a la imagen para verla en mejor calidad</p>
   </div>
 
-  <h2>🌞 Verano</h2>
+  <h2> Frutas (🌞)</h2>
   <div class="productos">
-    <div class="producto"><img src=""><p>Dulce de membrillo</p><p class="imglink">En temporada..</p></div>
-    <div class="producto"><img src=""><p>Nueces</p><p class="imglink">En temporada..</p></div>
-    <div class="producto"><img src=""><p>Arrope de chañar</p><p class="imglink">En temporada..</p></div>
-    <div class="producto"><img src=""><p>Queso de cabra</p><p class="imglink">En temporada..</p></div>
-    <div class="producto"><img src=""><p>Vino artesanal</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/membrillo.jpeg"><p>Membrillo</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/Producto4.jpeg"><p>Higos</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/Producto3.jpeg"><p>Uvas</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/pomelo.jpeg"><p>Pomelo</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/Producto1.jpeg"><p>Palta</p><p class="imglink">En temporada..</p></div>
+    <div class="producto"><img src="imagenes/Granada.jpeg"><p>Granada</p><p class="imglink">En temporada..</p></div>
   </div>
 
-  <h2>🍂 Otoño</h2>
+  <h2>Origen Animal</h2>
   <div class="productos">
-    <div class="producto"><img src=""><p>Higos secos</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Alfajores regionales</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Harina de algarroba</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Conservas caseras</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Miel de monte</p><p class="imglink">Fuera de temporada..</p></div>
-  </div>
-
-  <h2>❄️ Invierno</h2>
-  <div class="productos">
-    <div class="producto"><img src=""><p>Ponchos artesanales</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Chalinas de lana</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Tejidos regionales</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Infusiones de hierbas</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Quesillos</p><p class="imglink">Fuera de temporada..</p></div>
-  </div>
-
-  <h2>🌸 Primavera</h2>
-  <div class="productos">
-    <div class="producto"><img src=""><p>Cerámica artesanal</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Vinos jóvenes</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Frutas frescas</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Flores secas</p><p class="imglink">Fuera de temporada..</p></div>
-    <div class="producto"><img src=""><p>Esencias naturales</p><p class="imglink">Fuera de temporada..</p></div>
+    <div class="producto"><img src="imagenes/Producto2.jpeg"><p>Lana de Oveja</p><p class="imglink">Fuera de temporada..</p></div>
+    <div class="producto"><img src="imagenes/Lechon.jpeg"><p>Lechon</p><p class="imglink">Fuera de temporada..</p></div>
+    <div class="producto"><img src="imagenes/Huevos.jpeg"><p>Huevos</p><p class="imglink">Fuera de temporada..</p></div>
   </div>
 
 </main>
 
 <footer>
   <p>
-    <a href="https://es.wikipedia.org/wiki/Catamarca" target="_blank">Contacta por Facebook</a> |
-    <a href="https://chat.whatsapp.com/EfznRm8hO3XIkbs5QcVwCU" target="_blank">Contacta con nosotros por whatsapp</a>
+    <a href="" target="_blank">Contacta atravez de Facebook (En En desarrollo)</a> |
+    <a href="https://chat.whatsapp.com/EfznRm8hO3XIkbs5QcVwCU" target="_blank">Contacta con nosotros por nuestro grupo de whatsapp</a>
   </p>
   <p>Contacto: +54 9 383 123 4567</p>
 </footer>
