--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   <div class="quienes-somos">
     <h2>Quiénes somos</h2>
-    <p>La huerta Gelido y "Asociados" es un pequeño grupo de vendedores catamarqueños conformados por locales que venden su productos organicos mas alla de la provincia, conformado por Eduardo Gelido Sein y asociados venden productos Organicos sin alterar o procesar de manera industrial para el consumo, para contactarnos con nosotros puede tanto pedir en la pagina(El carrito esta en trabajo) o contactarse con nosotros via grupo de WhatsApp, Facebook o de manera directa</p>
+    <p>La huerta Gelido y "Asociados" es un pequeño grupo de vendedores catamarqueños conformados por locales que venden su productos naturales mas alla de la provincia, conformado por Eduardo Gelido Sein y asociados que venden sus cosechas naturales sin alterar o procesar de manera industrial para el consumo propio, para contactarnos con nosotros puede tanto pedir en la pagina(El carrito esta en trabajo) o contactarse con nosotros via grupo de WhatsApp, Facebook o de manera directa</p>
 
     <a href="#" class="link-ubicacion">Mas informacion de nosotros</a>
 
@@ -181,7 +181,7 @@
       <div class="info-box">
         <h3>Nuestra calidad</h3>
         <img src="imagenes/Cultivo.jpeg">
-        <p>Nuestros productos son de origen natural e organicos, las frutas crecen de manera natural, sin ninguna clase de pesticida y nuestros animales se alimentan tanto de las mismas frutas como el pasto del lugar, sin ninguna hormona de crecimiento acelerado o producto quimico para alterar o aumentar su carne</p>
+        <p>Nuestros productos son de origen natural, las frutas crecen de manera natural, sin ninguna clase de pesticida y nuestros animales se alimentan tanto de las mismas frutas como el pasto del lugar, sin ninguna hormona de crecimiento acelerado o producto quimico para alterar o aumentar su carne</p>
       </div>
       <div class="info-box">
         <h3>Dónde nos ubicamos</h3>
@@ -197,7 +197,7 @@
     <div class="producto-grande"><img src="imagenes/Producto4.jpeg"><div><h3>Higos</h3><p>Los higos de la finca son los mas cuidados dentro de la huerta siendo lo mas consumido en esta ademas de la palta</p></div></div>
     <div class="producto-grande"><img src="imagenes/Producto3.jpeg"><div><h3>Uvas</h3><p>Las Uvas crecidas en la huerta llegan hasta el techo las cosechamos durante todo el verano siendo un dulce natural apreciado por la familia</p></div></div>
     <div class="producto-grande"><img src="imagenes/Producto1.jpeg"><div><h3>Palta</h3><p>Podemos decir con un poquito de orgullo que nuestra huerta es la unica en la que crecen paltas, las mas ricas de toda Catamarca, no muchos dentro del pueblo de Huillapima posee este hermoso arbol de paltas</p></div></div>
-    <div class="producto-grande"><img src="imagenes/Zapayo.jpeg"><div><h3>Zapayo</h3><p>El cultivo de Zapayos pertence a uno de los compañeros de campo nuestro que tambien mostramos la calidad de su producto</p></div></div>
+    <div class="producto-grande"><img src="imagenes/Zapayo.jpeg"><div><h3>Zapllo</h3><p>El cultivo de Zapayos pertence a uno de los compañeros de campo nuestro que tambien mostramos la calidad de su producto</p></div></div>
       <div class="producto-grande"><img src="imagenes/Granada.jpeg"><div><h3>Granada</h3><p>En la finca poseemos varios arboles que nos dan toda clase de frutas pero las Granadas son las mas ricas que tenemos en nuestra finca</p></div></div>    
   </div>
 
@@ -249,5 +249,5 @@
 </script>
 
 </body>
-
 </html>
+
