--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
   <h2>Frutas</h2>
   <div class="seccion-columna">
-    <div class="producto-grande"><img src="imagenes/membrillo.jpeg"><div><h3>Membrillo</h3><p>Nuestro membrillo crece de manera natural cultivado y cuidado desde que se planto llegamos a procesarlo para hacerla mermelada</p></div></div>
+    <div class="producto-grande"><img src="imagenes/Membrillo.jpeg"><div><h3>Membrillo</h3><p>Nuestro membrillo crece de manera natural cultivado y cuidado desde que se planto llegamos a procesarlo para hacerla mermelada</p></div></div>
     <div class="producto-grande"><img src="imagenes/Producto4.jpeg"><div><h3>Higos</h3><p>Los higos de la finca son los mas cuidados dentro de la huerta siendo lo mas consumido en esta ademas de la palta</p></div></div>
     <div class="producto-grande"><img src="imagenes/Producto3.jpeg"><div><h3>Uvas</h3><p>Las Uvas crecidas en la huerta llegan hasta el techo las cosechamos durante todo el verano siendo un dulce natural apreciado por la familia</p></div></div>
     <div class="producto-grande"><img src="imagenes/Producto1.jpeg"><div><h3>Palta</h3><p>Podemos decir con un poquito de orgullo que nuestra huerta es la unica en la que crecen paltas, las mas ricas de toda Catamarca, no muchos dentro del pueblo de Huillapima posee este hermoso arbol de paltas</p></div></div>
@@ -250,5 +250,6 @@
 
 </body>
 </html>
+
 
 
